<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="end|right"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/AB"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toEndOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/T"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fieldOne"
        app:layout_constraintStart_toEndOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/T"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <EditText
        android:id="@+id/fieldThree"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="@+id/fieldTwo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fieldTwo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/F"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fieldFour"
        app:layout_constraintStart_toEndOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/F"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fieldTwo"
        app:layout_constraintStart_toEndOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/F"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/T"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="@+id/textView34"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/T"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fieldThree"
        app:layout_constraintStart_toEndOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:text="@string/A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/fieldTwo"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/fieldOne"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fieldOne" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/F"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/subBtn"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/B"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName10"
        app:layout_constraintStart_toEndOf="@+id/textView29" />

    <EditText
        android:id="@+id/fieldOne"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView34"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10" />

    <EditText
        android:id="@+id/fieldFour"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="@+id/fieldThree"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fieldThree" />

    <Button
        android:id="@+id/subBtn"
        android:layout_width="101dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/submitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldFour" />

</androidx.constraintlayout.widget.ConstraintLayout>